# mkdocs-materialx

./: .eslintrc  .stylelintrc  CHANGELOG  Dockerfile  README.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: 01-report-a-bug.yml  02-report-a-docs-issue.yml
.github/workflows/: build.yml  build.yml.disabled  documentation.yml  documentation.yml.disabled
docs/: .dates_cache.jsonl  creating-your-site.md  customization.md  differences.md  getting-started.md  installation.md  publishing-your-site.md  schema.json  upgrade.md
docs/archives/: alternatives.md  getting-started.md  philosophy.md
docs/archives/blog/posts/: adding-a-badge-to-your-project.md  blog-support-just-landed.md  chinese-search-support.md  git-sparse-checkout.md  goodbye-github-discussions.md  search-better-faster-smaller.md  sunsetting-gitter.md  the-past-present-and-future.md  transforming-material-for-mkdocs.md
docs/archives/insiders/: upgrade.md
docs/archives/tutorials/: index.md
docs/assets/: mkdocs.yml
docs/assets/images/: git.drawio  wiring.drawio
docs/blog/posts/: search-better-faster-smaller.md
docs/changelog/: index.md  upgrade.md
docs/contributing/: adding-translations.md  index.md  making-a-pull-request.md  reporting-a-bug.md  requesting-a-change.md
docs/insiders/: getting-started.md
docs/plugins/: blog.md  date-author.md  index.md  offline.md  optimize.md  privacy.md  search.md  social.md  tags.md
docs/plugins/requirements/: image-processing.md
docs/reference/: admonitions.md  code-blocks.md  content-tabs.md  diagrams.md  grids.md  icons-emojis.md  index.md  tooltips.md
docs/schema/: extra.json  theme.json
docs/schema/assets/: icons.json
docs/schema/extensions/: markdown.json  pymdownx.json
docs/schema/plugins/: blog.json  group.json  info.json  meta.json  offline.json  optimize.json  privacy.json  projects.json  search.json  social.json  tags.json  typeset.json
docs/setup/: adding-a-comment-system.md  adding-a-git-repository.md  adding-document-dates-authors.md  adding-recent-updates-module.md  changing-the-colors.md  changing-the-language.md  changing-the-logo-and-icons.md  index.md  setting-up-a-blog.md  setting-up-navigation.md  setting-up-site-analytics.md  setting-up-site-search.md  setting-up-social-cards.md  setting-up-tags.md  setting-up-the-footer.md  setting-up-the-header.md
docs/setup/extensions/: python-markdown.md
docs/tutorials/blogs/: engage.md  navigation.md
docs/tutorials/social/: basic.md  custom.md
material/: __init__.py
material/overrides/: home.html  main.html
material/overrides/assets/javascripts/: custom.01b6d078.min.js  custom.01b6d078.min.js.map  custom.9362617c.min.js  custom.9362617c.min.js.map  custom.c41085fd.min.js  custom.c41085fd.min.js.map  custom.ce511e7e.min.js  custom.ce511e7e.min.js.map  iconsearch_index.json
material/overrides/assets/stylesheets/: custom.26032b3c.min.css  custom.26032b3c.min.css.map  custom.bfd01277.min.css  custom.bfd01277.min.css.map
material/plugins/info/: plugin.py
material/templates/: base.html  sitemap.xml
material/templates/partials/: admonitions.html  content.html  copyright.html  header.html  icons.html  post.html  source-file.html  tags.html  top.html
src/extensions/: code_download.py
src/overrides/: home.html
src/plugins/blog/: plugin.py
src/plugins/optimize/: plugin.py
src/plugins/social/: plugin.py
src/plugins/tags/: plugin.py
src/templates/: base.html
src/templates/partials/: admonitions.html  content.html  copyright.html  header.html  icons.html  post.html  source-file.html  tags.html  top.html
src_backup_1774242037/templates/: base.html
src_backup_1774242037/templates/partials/: nav-item.html  toc.html
src_backup_1774242271/overrides/: home.html  main.html
src_backup_1774242271/overrides/hooks/: translations.py
src_backup_1774242271/templates/partials/: header.html  nav.html  search.html
(+163 files in other folders)
