# Copyright (c) 2016-2025 Martin Donath <martin.donath@squidfunk.com>

# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to
# deal in the Software without restriction, including without limitation the
# rights to use, copy, modify, merge, publish, distribute, sublicense, and/or
# sell copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:

# The above copyright notice and this permission notice shall be included in
# all copies or substantial portions of the Software.

# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
# FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
# IN THE SOFTWARE.

[build-system]
requires = [
  "hatchling",
  "hatch-nodejs-version>=0.3.0",
  "trove_classifiers>=2023.10.18",
]
build-backend = "hatchling.build"

[project]
name = "mkdocs-materialx"
dynamic = [
  "version",
  "license",
  "description",
  "authors",
  "keywords"
]

readme = "README.md"
requires-python = ">=3.8"

dependencies = [
  "mkdocs>=1.6,<=1.6.1",
  "properdocs>=1.6.5",
  "jinja2>=3.1",
  "markdown>=3.2",
  "mkdocs-material-extensions>=1.3",
  "pygments>=2.16",
  "pymdown-extensions>=10.2",
  "babel>=2.10",
  "colorama>=0.4",
  "paginate>=0.5",
  "backrefs>=5.7.post1",
  "requests>=2.30",
  "mkdocs-document-dates>=3.7.3"
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Framework :: MkDocs",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: JavaScript",
  "Programming Language :: Python",
  "Topic :: Documentation",
  "Topic :: Software Development :: Documentation",
  "Topic :: Text Processing :: Markup :: HTML",
]

[project.optional-dependencies]
recommended = [
  "mkdocs-minify-plugin>=0.7",
  "mkdocs-redirects>=1.2",
  "mkdocs-glightbox>=0.5"
]
git = [
  "mkdocs-git-committers-plugin-2>=1.1"
]
imaging = [
  "pillow>=10.2",
  "cairosvg>=2.6"
]

[project.urls]
Documentation = "https://jaywhj.github.io/mkdocs-materialx/"
Source = "https://github.com/jaywhj/mkdocs-materialx"
Changelog = "https://github.com/jaywhj/mkdocs-materialx/changelog/"
Issues = "https://github.com/jaywhj/mkdocs-materialx/issues"

[project.entry-points."mkdocs.plugins"]
"materialx/blog" = "material.plugins.blog.plugin:BlogPlugin"
"materialx/group" = "material.plugins.group.plugin:GroupPlugin"
"materialx/info" = "material.plugins.info.plugin:InfoPlugin"
"materialx/meta" = "material.plugins.meta.plugin:MetaPlugin"
"materialx/offline" = "material.plugins.offline.plugin:OfflinePlugin"
"materialx/optimize" = "material.plugins.optimize.plugin:OptimizePlugin"
"materialx/privacy" = "material.plugins.privacy.plugin:PrivacyPlugin"
# "materialx/projects" = "material.plugins.projects.plugin:ProjectsPlugin"
"materialx/search" = "material.plugins.search.plugin:SearchPlugin"
"materialx/social" = "material.plugins.social.plugin:SocialPlugin"
"materialx/tags" = "material.plugins.tags.plugin:TagsPlugin"
# "materialx/typeset" = "material.plugins.typeset.plugin:TypesetPlugin"

[project.entry-points."mkdocs.themes"]
materialx = "material.templates"

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = ["license", "description", "authors", "keywords", "urls"]

[tool.hatch.build.targets.wheel]
include = ["/material"]

[tool.hatch.build.targets.sdist]
include = ["/material", "/package.json"]
exclude = ["/material/overrides"]
